More minecraft configuration

--- a/minecraft/etc/systemd/system/minecraft.service
+++ b/minecraft/etc/systemd/system/minecraft.service
@@ -4,8 +4,8 @@ Description=Minecraft Server
 [Service]
 WorkingDirectory=/opt/minecraft
 ExecStart=/usr/bin/java -Xmx6G -jar fabric-server-mc.jar nogui
-ExecStop=/bin/bash -c 'echo "save-all flush" > %t/minecraft.socket'
-ExecStop=/bin/bash -c 'echo "stop" > %t/minecraft.socket'
+ExecStop=/bin/bash -c 'echo "save-all flush" > %t/minecraft/minecraft.socket'
+ExecStop=/bin/bash -c 'echo "stop" > %t/minecraft/minecraft.socket'
 ExecStop=/bin/bash -c '/usr/bin/lsof -p $MAINPID +r 1 > /dev/null'
 
 User=minecraft
@@ -22,6 +22,9 @@ Sockets=minecraft.socket
 StandardInput=socket
 StandardOutput=journal
 StandardError=journal
+
+Restart=always
+RestartSec=5s
 
 [Install]
 WantedBy=multi-user.target
